--- a/src/main/resources/template/styles.css
+++ b/src/main/resources/template/styles.css
@@ -15,7 +15,6 @@ body {
 
 }
 
-
 #ads .icon-type {
  position: absolute;
  right: -10px;
@@ -52,12 +51,11 @@ body {
 
 .border-yellow {
  border-top: 4px solid #b8860b;
- border-bottom: 4px solid #b8860b;
 }
 
 #ads .card:hover {
  box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
- border-radius: 4px;
+ border-radius: 2em;
  transition: all 0.3s ease;
  transform: scale(1.3);
  z-index: 1;
@@ -67,7 +65,6 @@ body {
  font-size: 20px;
 
 }
-
 
 #ads .card-image-overlay span {
  display: inline-block;
@@ -106,3 +103,10 @@ body {
  font-size: 18px;
 }
 
+#pokemon-card{
+ border-radius:2em;
+}
+
+#pokemon-trainer {
+ font-size: 13px;
+}
