--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -23,18 +23,20 @@
         <div class="row my-md-4" id="ads">
             <!-- Category Card -->
             <div class="col-md-4 mb-4">
-                <div id="pokemon-card" class="card" style="border: 10px solid #b8860b">
-                    <div style="border-bottom: 5px solid #b8860b">
+                <div class="card grass-gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
+                    <div style="border-bottom: 5px solid #ffcb05">
                         <div class="pl-4">
-                            <div class="d-flex justify-content-start p-3 ad-title">
-                                <h5 class="pr-5">Bulbasaur</h5>
-                                <h6>80/100</h6>
+                            <div class="d-flex justify-content-start px-3 pt-2 ad-title">
+                                <h5 class="font-weight-bold">Bulbasaur</h5>
+                            </div>
+                            <div class="d-flex justify-content-start px-3 ad-title">
+                                <h6>80/100HP</h6>
                             </div>
                         </div>
                         <img class="img-fluid icon-type" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
                     </div>
                     <div class="card-image d-flex justify-content-center mt-3">
-                        <img class="img-fluid ground-gradient-bg p-3" style="border: 5px solid #b8860b" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Alternate Text" />
+                        <img class="img-fluid p-3" width="65%" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Alternate Text" />
                     </div>
                     <div class="d-flex justify-content-center mt-2">
                         <h5>Pokemon Nickname</h5>
@@ -79,7 +81,71 @@
                             </ul>
                         </ul>
                     </div>
-                    <div id="pokemon-trainer" class="px-2 d-flex justify-content-center">
+                    <div class="px-2 d-flex justify-content-center pokemon-trainer">
+                        <p>Original Trainer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card" style="border: 10px solid #ffcb05; border-radius: 2em">
+                    <div style="border-bottom: 5px solid #ffcb05">
+                        <div class="pl-4">
+                            <div class="d-flex justify-content-start pt-2 px-3 ad-title">
+                                    <h5 class="font-weight-bold">Scyther</h5>
+                            </div>
+                            <div class="d-flex justify-content-start px-3 ad-title">
+                                <h6>80/100HP</h6>
+                            </div>
+                        </div>
+                        <img class="img-fluid icon-type" src="https://i.imgur.com/2ngWiIE.png" alt="Alternate Text" />
+                    </div>
+                    <div class="card-image d-flex justify-content-center mt-3">
+                        <img class="img-fluid ground-gradient-bg p-3" width="65%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/123.png" alt="Alternate Text" />
+                    </div>
+                    <div class="d-flex justify-content-center mt-2">
+                        <h5>Pokemon Nickname</h5>
+                    </div>
+                    <div class="card-body border-yellow mt-2">
+                        <ul class="list-group">
+                            <ul class="list-inline">
+                                <div class="d-flex justify-content-between">
+                                    <li class="list-inline-item">
+                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
+                                    </li>
+                                    <li class="list-inline-item">move name</li>
+                                    <li class="list-inline-item">move power</li>
+                                </div>
+                            </ul>
+                            <ul class="list-inline">
+                                <div class="d-flex justify-content-between">
+                                    <li class="list-inline-item">
+                                        <img width="30px" height="30px" src="https://i.imgur.com/WerWKO0.png" alt="Alternate Text" />
+                                    </li>
+                                    <li class="list-inline-item">move name</li>
+                                    <li class="list-inline-item">move power</li>
+                                </div>
+                            </ul>
+                            <ul class="list-inline">
+                                <div class="d-flex justify-content-between">
+                                    <li class="list-inline-item">
+                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
+                                    </li>
+                                    <li class="list-inline-item">move name</li>
+                                    <li class="list-inline-item">move power</li>
+                                </div>
+                            </ul>
+                            <ul class="list-inline">
+                                <div class="d-flex justify-content-between">
+                                    <li class="list-inline-item">
+                                        <img width="30px" height="30px" src="https://i.imgur.com/uEeFwee.png" alt="Alternate Text" />
+                                    </li>
+                                    <li class="list-inline-item">move name</li>
+                                    <li class="list-inline-item">move power</li>
+                                </div>
+                            </ul>
+                        </ul>
+                    </div>
+                    <div class="px-2 d-flex justify-content-center pokemon-trainer">
                         <p>Original Trainer</p>
                     </div>
                 </div>
@@ -103,7 +169,7 @@
                 <div class="card rounded water-gradient-bg" style="border: 10px solid #b8860b">
                     <div class="card-image d-flex justify-content-center mt-5 mb-3">
                         <img class="img-fluid icon-type" src="https://i.imgur.com/AITT6dU.png" alt="Alternate Text" />
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Alternate Text" />
+                        <img class="img-fluid" src="" alt="Alternate Text" />
                     </div>
                     <div class="card-body text-center border-yellow">
                         <div class="ad-title m-auto">
