--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -22,26 +22,26 @@
 <div class="container">
         <div class="row my-md-4" id="ads">
             <!-- Category Card -->
-            <div class="col-md-4 mb-4">
-                <div class="card grass-gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
+            <div class="col-md-4 mb-4 ">
+                <div class="card gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
                     <div style="border-bottom: 5px solid #ffcb05">
                         <div class="pl-4">
                             <div class="d-flex justify-content-start px-3 pt-2 ad-title">
                                 <h5 class="font-weight-bold">Bulbasaur</h5>
                             </div>
                             <div class="d-flex justify-content-start px-3 ad-title">
-                                <h6>80/100HP</h6>
+                                <h6>80/100 HP</h6>
                             </div>
                         </div>
                         <img class="img-fluid icon-type" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
                     </div>
                     <div class="card-image d-flex justify-content-center mt-3">
-                        <img class="img-fluid p-3" width="65%" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Alternate Text" />
+                        <img class="img-fluid grass-gradient-bg p-3" width="75%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Alternate Text" />
                     </div>
                     <div class="d-flex justify-content-center mt-2">
                         <h5>Pokemon Nickname</h5>
                     </div>
-                    <div class="card-body border-yellow mt-2">
+                    <div class="card-body mt-2">
                         <ul class="list-group">
                             <ul class="list-inline">
                                 <div class="d-flex justify-content-between">
@@ -87,25 +87,25 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card" style="border: 10px solid #ffcb05; border-radius: 2em">
+                <div class="card gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
                     <div style="border-bottom: 5px solid #ffcb05">
                         <div class="pl-4">
                             <div class="d-flex justify-content-start pt-2 px-3 ad-title">
                                     <h5 class="font-weight-bold">Scyther</h5>
                             </div>
                             <div class="d-flex justify-content-start px-3 ad-title">
-                                <h6>80/100HP</h6>
+                                <h6>80/100 HP</h6>
                             </div>
                         </div>
                         <img class="img-fluid icon-type" src="https://i.imgur.com/2ngWiIE.png" alt="Alternate Text" />
                     </div>
                     <div class="card-image d-flex justify-content-center mt-3">
-                        <img class="img-fluid ground-gradient-bg p-3" width="65%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/123.png" alt="Alternate Text" />
+                        <img class="img-fluid bug-gradient-bg p-3" width="75%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/123.png" alt="Alternate Text" />
                     </div>
                     <div class="d-flex justify-content-center mt-2">
                         <h5>Pokemon Nickname</h5>
                     </div>
-                    <div class="card-body border-yellow mt-2">
+                    <div class="card-body  mt-2">
                         <ul class="list-group">
                             <ul class="list-inline">
                                 <div class="d-flex justify-content-between">
@@ -150,51 +150,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card rounded fire-gradient-bg" style="border: 10px solid #b8860b">
-                    <div class="card-image d-flex justify-content-center mt-5 mb-3">
-                        <img class="img-fluid icon-type" src="https://i.imgur.com/PIfsuGY.png" alt="Alternate Text" />
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Alternate Text" />
-                    </div>
-                    <div class="card-body text-center border-yellow">
-                        <div class="ad-title m-auto">
-                            <h5>Charmender</h5>
-                        </div>
-                        <a class="ad-btn" href="#">View</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-                <div class="card rounded water-gradient-bg" style="border: 10px solid #b8860b">
-                    <div class="card-image d-flex justify-content-center mt-5 mb-3">
-                        <img class="img-fluid icon-type" src="https://i.imgur.com/AITT6dU.png" alt="Alternate Text" />
-                        <img class="img-fluid" src="" alt="Alternate Text" />
-                    </div>
-                    <div class="card-body text-center border-yellow">
-                        <div class="ad-title m-auto">
-                            <h5>Squirtle</h5>
-                        </div>
-                        <a class="ad-btn" href="#">View</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-                <div class="card rounded electric-gradient-bg" style="border: 10px solid #b8860b">
-                    <div class="card-image d-flex justify-content-center mt-5 mb-3">
-                        <img class="img-fluid icon-type" src="https://i.imgur.com/TKgE4D4.png" alt="Alternate Text" />
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/25.svg" alt="Alternate Text" />
-                    </div>
-                    <div class="card-body text-center border-yellow">
-                        <div class="ad-title m-auto">
-                            <h5>Pikachu</h5>
-                        </div>
-                        <a class="ad-btn" href="#">View</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
 </div>
 </body>
