--- a/src/main/resources/templates/styles.css
+++ b/src/main/resources/templates/styles.css
@@ -8,8 +8,6 @@ body {
  background-repeat: no-repeat;
 }
 
-
-
 .icon-type {
  position: absolute;
  right: -10px;
@@ -43,7 +41,7 @@ body {
  background: linear-gradient(180deg, #ffffff, #fcd362);
 }
 
-#ads .card:hover {
+#pokemon-container .card:hover {
  box-shadow: 12px 15px 20px 0px rgba(46,61,73,0.15);
  border-radius: 2em;
  transition: all 0.3s ease;
@@ -51,7 +49,7 @@ body {
  z-index: 1;
 }
 
-#ads .ad-title h5 {
+#pokemon-container .ad-title h5 {
  text-transform: uppercase;
  font-size: 18px;
 }
@@ -66,10 +64,10 @@ body {
     20%, 40%, 60%, 80% { transform: translateX(5px) rotateZ(5deg); }
   }
   
-  #pokeball {
+#pokeball {
     cursor: pointer;
     animation: shake 2s infinite;
     height: auto;
     max-width: 25%;
-  }
+}
   
