--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Grid with Bootstrap - Cards</title>
     <!-- Aggiungi il link al tuo file CSS personalizzato -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,138 +20,13 @@
 </div>
 
 <div class="container">
-        <div class="row my-md-4" id="ads">
-            <!-- Category Card -->
-            <div class="col-md-4 mb-4 ">
-                <div class="card gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
-                    <div style="border-bottom: 5px solid #ffcb05">
-                        <div class="pl-4">
-                            <div class="d-flex justify-content-start px-3 pt-2 ad-title">
-                                <h5 class="font-weight-bold">Bulbasaur</h5>
-                            </div>
-                            <div class="d-flex justify-content-start px-3 ad-title">
-                                <h6>80/100 HP</h6>
-                            </div>
-                        </div>
-                        <img class="img-fluid icon-type" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
-                    </div>
-                    <div class="card-image d-flex justify-content-center mt-3">
-                        <img class="img-fluid grass-gradient-bg p-3" width="75%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png" alt="Alternate Text" />
-                    </div>
-                    <div class="d-flex justify-content-center mt-2">
-                        <h5>Pokemon Nickname</h5>
-                    </div>
-                    <div class="card-body mt-2">
-                        <ul class="list-group">
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/WerWKO0.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/uEeFwee.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                        </ul>
-                    </div>
-                    <div class="px-2 d-flex justify-content-center pokemon-trainer">
-                        <p>Original Trainer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card gradient-bg" style="border: 10px solid #ffcb05; border-radius: 2em">
-                    <div style="border-bottom: 5px solid #ffcb05">
-                        <div class="pl-4">
-                            <div class="d-flex justify-content-start pt-2 px-3 ad-title">
-                                    <h5 class="font-weight-bold">Scyther</h5>
-                            </div>
-                            <div class="d-flex justify-content-start px-3 ad-title">
-                                <h6>80/100 HP</h6>
-                            </div>
-                        </div>
-                        <img class="img-fluid icon-type" src="https://i.imgur.com/2ngWiIE.png" alt="Alternate Text" />
-                    </div>
-                    <div class="card-image d-flex justify-content-center mt-3">
-                        <img class="img-fluid bug-gradient-bg p-3" width="75%" style="border: 5px solid #ffcb05" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/123.png" alt="Alternate Text" />
-                    </div>
-                    <div class="d-flex justify-content-center mt-2">
-                        <h5>Pokemon Nickname</h5>
-                    </div>
-                    <div class="card-body  mt-2">
-                        <ul class="list-group">
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/WerWKO0.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/BtPM9xr.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                            <ul class="list-inline">
-                                <div class="d-flex justify-content-between">
-                                    <li class="list-inline-item">
-                                        <img width="30px" height="30px" src="https://i.imgur.com/uEeFwee.png" alt="Alternate Text" />
-                                    </li>
-                                    <li class="list-inline-item">move name</li>
-                                    <li class="list-inline-item">move power</li>
-                                </div>
-                            </ul>
-                        </ul>
-                    </div>
-                    <div class="px-2 d-flex justify-content-center pokemon-trainer">
-                        <p>Original Trainer</p>
-                    </div>
-                </div>
+        <div class="row my-md-4" id="pokemon-container">
+            <div class="col-md-12 text-center mt-5">
+                <img src="../static/images/index/Pokeball.png" id="pokeball" class="img-pokeball" alt="Pokeball Image">
             </div>
         </div>
 </div>
+<script src="../js/index.js"></script>
 </body>
 
 </html>
