--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -103,11 +103,15 @@ body {
 
 #pokemon-container .ad-title h5 {
  text-transform: uppercase;
- font-size: 18px;
+ font-size: 22px;
 }
 
 .pokemon-trainer {
- font-size: 13px;
+ font-size: 20px;
+}
+
+.move-font-size {
+    font-size: 20px;
 }
 
 @keyframes shake {
