refactor(style.css): adds trade-section class that uses external font with its link tag and other attributes

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -8,6 +8,12 @@ body {
  background-repeat: no-repeat;
 }
 
+.trade-section {
+    font-family: 'Pokemon Solid', sans-serif;
+    color: #ffcb05;
+    cursor: pointer;
+}
+
 .icon-type {
  position: absolute;
  right: -10px;
