refactor(index.js):changes pokemon card font-family style and imports font in index.html file

--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -11,6 +11,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/b357504117fd83d25e5a63601455b367?family=SF+Distant+Galaxy" rel="stylesheet">
 </head>
 <body>
     <header>
