--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,7 +3,7 @@
 
 body {
  font-family: 'Montserrat', sans-serif;
- background-image: url('../static/images/index/pokemon-mystery-dungeon-squadra-soccorso-dx-recensione-cover-1620x800.jpg');
+ background-image: url('../images/index/pokemon-mystery-dungeon-squadra-soccorso-dx-recensione-cover-1620x800.jpg');
  background-size: cover;
  background-repeat: no-repeat;
 }
@@ -14,7 +14,9 @@ body {
     cursor: pointer;
 }
 
-
+h2{
+    -webkit-text-stroke: 2px #2262a8;
+}
 
 .bug-gradient-bg {
  background: linear-gradient(45deg, #1c4b27, #3c9950);
@@ -126,8 +128,43 @@ body {
     max-width: 25%;
 }
 
+.errorMessageModal:hover {
+    animation: shake 0.90s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
 
+@keyframes shake {
+    20%, 80% {
+        transform: translate3d(-3px, 0, 0);
+    }
 
+    30%, 70% {
+        transform: translate3d(5px, 0, 0);
+    }
+
+    40%, 60%, 80% {
+        transform: translate3d(-6px, 0, 0);
+    }
+
+    50%, 70% {
+        transform: translate3d(6px, 0, 0);
+    }
+}
+
+.modal-borders-header{
+    border-top-left-radius: 30px !important;
+    border-top-right-radius: 30px !important;
+}
+
+.modal-borders-content{
+    border-radius: 30px !important;
+}
+
+.body-modal-font-size{
+    font-size: 18px;
+}
 
 .icon-type {
 
@@ -137,3 +174,28 @@ body {
     right: -1px; /* Spazio di 10px dalla parte destra della card */
     border-radius: 50%; /* Imposta il bordo circolare */
 }
+
+.bounce-1 {
+    animation: bounce-1 1s infinite;
+}
+
+.bounce-1:hover{
+    animation: rotation 2s infinite;
+}
+
+@keyframes bounce-1 {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(-20px); }
+    100% { transform: translateY(0); }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
+
+
