refactor: adds an image that will be used as the background of the cards, and changes the color of the card borders

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -119,7 +119,7 @@ h2{
 }
 
 .gradient-bg {
- background: linear-gradient(180deg, #ffffff, #fcd362);
+    background-image: url("../images/index/card-background.jpg");
 }
 
 #pokemon-container .card:hover {
